remove uneeded func and make width responsive

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,8 +107,9 @@ a:visited {
 
 .form-container {
     background-color: white;
+    width: 600px;
     max-width: 90%;
-    margin: 0 auto;
+    margin: 50px auto;
 
     h2 {
         margin-left: 25px;
