--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,9 @@ a:visited {
 
 .form-container {
   background-color: white;
+  width: 600px;
   max-width: 90%;
-  margin: 0 auto;
+  margin: 50px auto;
 }
 
 .form-container h2 {
