add thanks page styling and diable form on load

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -154,3 +154,11 @@ a:visited {
         margin: 5px auto;
     }
 }
+
+.thanks-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
